--- a/src/assest/css/home.css
+++ b/src/assest/css/home.css
@@ -28,13 +28,12 @@ body {
 }
 
 .btn-theme{
-  background-color: #333;
-  color: #fff;
+  background-color: transparent;
   border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-size: 12px;
+  font-size: 1.8rem;
   cursor: pointer;
+  position: absolute;
+  right: 1.5rem;
 }
 
 .titulo {
